Bring more in line with Caffeine